--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=mongodb+srv://nakodvenkatesh43:ZBgETr6b2xLujtjV@cluster0.otpbdy9.mongodb.net/weather
+DATABASE_URL=mongodb://localhost:27017
 TOKEN_SECRET=secret
 REFRESH_TOKEN_SECRET=refreshsecret
