--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=mongodb://localhost:27017
+DATABASE_URL=mongodb://127.0.0.1:27017
 TOKEN_SECRET=secret
 REFRESH_TOKEN_SECRET=refreshsecret
